fixed styling, navbar to include employer dropdown, calendar still doesnt work but fixed to align to grid

--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -6,3 +6,8 @@ div.homepage > div > input[type= "text"]{
 .nameOfuser {
   padding: 15px;
 }
+
+.secondary {
+  color: #E9EB9E;
+  font-weight: bold;
+}
